--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
             <h2>Luis Jiménez Navajas</h2>
-            <p>aQuantum, Alarcos Research Group.</p>
+            <p>aQuantum, Alarcos Research Group</p>
             <a href="https://twitter.com/LuigiQ_"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/luis-jim%C3%A9nez-navajas-955011148/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://orcid.org/0000-0001-6257-7153"><i class="fab fa-orcid"></i></a>
+            <a href="https://orcid.org/0000-0001-6257-7153"><i class="fa-brands fa-orcid"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
