--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
+			<img src="photo.jpg" style="width:300px;height:300px">
 			<h2>Luis Jiménez Navajas</h2>
             <p>aQuantum, Alarcos Research Group</p>
             <a href="https://twitter.com/LuigiQ_"><i class="fab fa-twitter"></i></a>
