--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 hybrid information systems. Software Quality Journal, 1-30.</p>
 
             <h3> Conference papers </h3>
+	    <p> Pérez-Castillo, R., Jiménez-Navajas, L., Cantalejo, I., & Piattini, M. (2023). Generation of Classical-Quantum Code from UML models. 
+		In 2023 IEEE/ACM 4th International Workshop on Quantum Software Engineering (Q-SE). </p>
             <p> Jiménez-Navajas, L., Pérez-Castillo, R., & Piattini, M. (2023). Reverse Engineering of OpenQASM3 quantum
                 programs to KDM models. In International Conference on Evaluation of Novel Approaches to Software
                 Engineering, ENASE 2023, Prage, Czech Republic.
